--- a/QR_Scanner.html
+++ b/QR_Scanner.html
@@ -35,8 +35,9 @@
 				   function (result) {
 				   alert("We got a barcode\n" +
 				   "Result: " + result.text + "\n" +
-				   "Format: " + result.format + "\n" +
-				   "Cancelled: " + result.cancelled);
+				   //"Format: " + result.format + "\n" +
+				   //"Cancelled: " + result.cancelled);
+				   window.location.href=result.text;
 				   }, 
 				   function (error) {
 				   alert("Scanning failed: " + error);
