--- a/QR_Scanner.html
+++ b/QR_Scanner.html
@@ -34,7 +34,7 @@
 				   scanner.scan(
 				   function (result) {
 				   alert("We got a barcode\n" +
-				   "Result: " + result.text + "\n" +
+				   "Result: " + result.text);
 				   //"Format: " + result.format + "\n" +
 				   //"Cancelled: " + result.cancelled);
 				   window.location.href=result.text;
