--- a/QR_coupon.html
+++ b/QR_coupon.html
@@ -20,6 +20,8 @@
 </style>
 
 <script src="js/jquery.js" type="text/javascript"></script>
+<script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="barcodescanner.js"></script>
 <script type="text/javascript">
 		$(document).ready(function() {
 		var qrCode = getUrlVars()['qrCode'];
