--- a/QR_Scanner.html
+++ b/QR_Scanner.html
@@ -37,7 +37,7 @@
 				   "Result: " + result.text);
 				   //"Format: " + result.format + "\n" +
 				   //"Cancelled: " + result.cancelled);
-				   window.location.href=result.text;
+				  // window.location.href=result.text;
 				   }, 
 				   function (error) {
 				   alert("Scanning failed: " + error);
@@ -45,6 +45,7 @@
 				   );
 
 				} catch (ex) {
+					alert(ex.message);
 					console.log(ex.message);
 				}
 			})
