--- a/loyality.html
+++ b/loyality.html
@@ -41,12 +41,13 @@
 <body>
     <input type="hidden" id="userSiteId" value="">
     <input type="hidden" id="lastClick" value="">
+	<input type="hidden" id="no_of_coupon" value="0">
     <a id="addSteps" href="#fanwallPopup" onclick="" data-position-to="window" data-rel="popup"></a>
     <input type="hidden" id="BackSteps" value="1">
     <div data-role="page">
         <div data-role="header" role="banner" class="header-content">
               <a data-rel="back" data-role="button" data-icon="arrow-l">Back</a>
-            <h1>Artist Information</h1>
+            <h1>Loyality Tab</h1>
             <a href="index.html" data-icon="home" data-ajax="false" class="ui-btn-right">Home</a>
         </div>
         <!-- /header -->
