--- a/email_photo.html
+++ b/email_photo.html
@@ -142,7 +142,7 @@
           params.value2 = "param";
                   options.params = params;
           var ft = new FileTransfer();
-          ft.upload(imageURI, "http://198.50.99.226/emailphoto.php", win, fail, options);
+          ft.upload(imageURI, "http://198.50.99.226/~admin/emailphoto.php", win, fail, options);
        }
    function win(r) 
    {
