--- a/app_recording.html
+++ b/app_recording.html
@@ -131,7 +131,7 @@
           params.value2 = "param";
                   options.params = params;
           var ft = new FileTransfer();
-          ft.upload(audio_path, "http://198.50.99.226/emailvoice.php", win, fail, options);
+          ft.upload(audio_path, "http://198.50.99.226/~admin/emailvoice.php", win, fail, options);
        }
    function win(r) 
    {
