--- a/audioPlayer/player.html
+++ b/audioPlayer/player.html
@@ -31,7 +31,7 @@
       <script src="js/jquery.mobile.config.js"></script>
 	  <script src="../js/script.js"></script>
       <script src="js/jquery.mobile-1.3.0.min.js"></script>
-      <script src="cordova.js"></script>
+      <script src="../cordova.js"></script>
 
       <script>
 	var src="";
