--- a/QR_coupon.html
+++ b/QR_coupon.html
@@ -21,6 +21,7 @@
 
 <script src="js/jquery.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
+<script src="cordova.js" type="text/javascript"></script>
 <script type="text/javascript">
 		$(document).ready(function() {
 		var qrCode = getUrlVars()['qrCode'];
