--- a/QR_coupon.html
+++ b/QR_coupon.html
@@ -27,7 +27,7 @@
 		var qrCode = getUrlVars()['qrCode'];
 		var hrsCheck = getUrlVars()['hrsCheck'];
 		var checkInTargetAmt = getUrlVars()['checkInTargetAmt'];
-		$('.btn-text').click(function(){
+		$('.roundbutton btn').click(function(){
 				console.log('scanning');
 				alert('coming');
 				try {
